# powerlifting_pi_camera

./: README.md  model.py  pyproject.toml  server.py  setup.sh
templates/: index.html
